# MTGAI

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  start-ollama.ps1  to review.txt
backend/: pyproject.toml
backend/mtgai/: __init__.py  config.py  packs.py
backend/mtgai/analysis/: __init__.py  balance.py  conformance.py  coverage.py  duplicates.py  gate_common.py  helpers.py  heuristic_checks.py  interactions.py  models.py  report.py  resource_economy.py
backend/mtgai/art/: __init__.py  art_selector.py  artist_assignment.py  character_portraits.py  entity_tags.py  image_generator.py  kontext_ab_test.py  kontext_sample.py  prompt_builder.py  pulid_test.py  set_symbol.py  visual_reference.py  visual_reference_extractor.py
backend/mtgai/gallery/: generator.py
backend/mtgai/generation/: __init__.py  archetype_generator.py  card_generator.py  constraint_deriver.py  land_generator.py  llm_client.py  mechanic_generator.py  ollama_debug.py  phase_poller.py  prefab.py  prompts.py  reminder_injector.py  reprint_knobs.py  reprint_pool.json  reprint_selector.py  skeleton_knobs_tuner.py  skeleton_prompt_blocks.py  skeleton_relabel.py  skeleton_reviser.py  slot_grouper.py  spec_check.py  temperatures.py  token_budgets.py  token_utils.py
backend/mtgai/io/: __init__.py  asset_paths.py  atomic.py  card_io.py  paths.py
backend/mtgai/models/: __init__.py  card.py  enums.py  mechanic.py  set.py
backend/mtgai/pipeline/: __init__.py  debug_routes.py  engine.py  events.py  history.py  models.py  server.py  stage_hooks.py  stages.py  theme_extractor.py  wizard.py
backend/mtgai/rendering/: __init__.py  __main__.py  card_renderer.py  colors.py  fonts.py  (+3 more)
backend/scripts/: bench_flash_attn_test.py  benchmark_gemma4.py  benchmark_gemma4_darksun.py  benchmark_gemma4_tc1f.py  benchmark_llama_bench.py  benchmark_llamacpp_tc2.py  canonicalize_type_lines.py  colored_artifact_frames.py  compare_artifact_aw.py  compare_hybrid_symbols.py  compare_land_watermark.py  fix_progress_json.py  generate_all_art.py  generate_lands.py  generate_two_color_frames.py  link_ollama_blobs.py  qa_seed_rendering_unapproved.py  qa_trim_cards.py  run_reprint_selection.py  test_constraints.py  test_long_context.py  test_sequence.py  test_suggestions_isolated.py
backend/tests/: conftest.py  test_archetype_generator.py  test_art_selector.py  test_card_generator.py  test_card_renderer.py  test_character_refs.py  test_config.py  test_constraint_deriver.py  test_entity_tags.py  test_finalize.py  test_image_generator.py  test_land_generator.py  test_llm_client_llamacpp.py  test_llm_client_ollama.py  test_mechanic_generator.py  test_packs.py  test_prompt_builder.py  test_prompts.py  test_reminder_injector.py  test_render_review.py  test_rendering_frames.py  test_reprint_knobs.py  test_reprint_selector.py  test_set_symbol.py  test_skeleton.py  test_skeleton_cycle_integration.py  test_skeleton_cycles.py  test_skeleton_knobs.py  test_skeleton_knobs_tuner.py  test_skeleton_relabel.py  test_skeleton_reviser.py  test_skeleton_subtypes.py  test_slot_grouper.py  test_spec_check.py  test_symbol_renderer.py  test_text_engine.py  test_token_utils.py  test_visual_reference.py  test_visual_reference_extractor.py  test_visual_reference_lookup.py  (+1 more)
(+1544 files in other folders)
