[project]
name = "mtgai"
version = "0.1.0"
description = "AI-powered Magic: The Gathering custom set creator"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "typer[all]>=0.12",
    "rich>=13.0",
    "anthropic>=0.32,<1",
    "openai>=2.32",
    "fastapi>=0.115,<1",
    "starlette<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "pymupdf>=1.24,<2",
    # Pillow is the rendering engine (mtgai/rendering/*: card_renderer, fonts,
    # symbol_renderer, text_engine all `from PIL import ...`). Declared explicitly
    # rather than relying on it being globally pre-installed on the dev box.
    "pillow>=10.4",
    "tiktoken>=0.7",
    "pyyaml>=6.0",
    # llamacpp extra pulls openai>=2.32 + pyyaml for managed-mode llama-swap.
    "llmfacade[llamacpp]",
    "tomlkit>=0.14.0",
    "python-multipart>=0.0.27",
]

# Local editable checkout so changes in the sibling LLMFacade repo are reflected
# immediately (no commit/push/relock cycle). Path is relative to this file
# (backend/). On a machine without ../../LLMFacade, swap this for the git source:
#   "llmfacade[llamacpp] @ git+https://github.com/Coamithra/LLMFacade.git@main"
[tool.uv.sources]
llmfacade = { path = "../../LLMFacade", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["mtgai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
